# nnVisualiser

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  result  vcpkg.json
docs/api/: core.md
docs/guides/: architecture.md  building.md  contributing.md  installation.md
docs/tutorials/: first-network.md
examples/: CMakeLists.txt  complete_demo.cpp  simple_xor_demo.cpp
examples/configs/: mnist_classifier.json  simple_xor.json
include/core/: ActivationFunctions.hpp  Application.hpp  Layer.hpp  LossFunctions.hpp  NeuralNetwork.hpp  Neuron.hpp  Types.hpp  WeightInitializers.hpp
include/graphics/: AnimationSystem.hpp  ColorScheme.hpp  LayoutManager.hpp  NetworkRenderer.hpp  RenderConfig.hpp  Visualizer.hpp
include/ui/: NetworkPanel.hpp  UIManager.hpp  UIPanel.hpp
include/utils/: Common.hpp  ConfigManager.hpp  DataLoader.hpp  Logger.hpp
src/: CMakeLists.txt  main.cpp
src/core/: ActivationFunctions.cpp  Application.cpp  CMakeLists.txt  Layer.cpp  LossFunctions.cpp  NeuralNetwork.cpp  Neuron.cpp  WeightInitializers.cpp
src/graphics/: AnimationSystem.cpp  CMakeLists.txt  ColorScheme.cpp  RenderConfig.cpp
src/ui/: CMakeLists.txt  NetworkPanel.cpp  UIPanel.cpp
src/utils/: CMakeLists.txt  Common.cpp  ConfigManager.cpp  DataLoader.cpp  Logger.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_neural_network.cpp  test_neuron.cpp
